# Riggatooly

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  rc_resources.py  requirements.txt  resources.qrc
.github/workflows/: build.yml
adapters/: harmony_adapter.py
riggatooly/: utils.py
riggatooly/core/: injector.py  snapper.py
riggatooly/gui/: main_window.py
riggatooly/resources/: strings.json  style.qss
